--- a/bin/install
+++ b/bin/install
@@ -1,7 +1,7 @@
 #!/bin/bash
 set -o pipefail
 
-# To install: curl https://raw.githubusercontent.com/jakubro/profile.d/main/bin/install | bash
+# To install: curl https://raw.githubusercontent.com/jakubro/profile.d/main/bin/install | /bin/bash
 
 # profile.d
 
